# photochron

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  OSS_AUDIT.md  OSS_HARDENING_STATUS.md  OSS_PLAN.md  README.md  SECURITY.md  SWARM_PLAN.json  SWARM_PLAN.md  anchors.yaml  config.yaml  pyproject.toml  renovate.json  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml
.opencode/: opencode-swarm.json  opencode.json
.swarm/: .plan-write-marker  context.md  curator-briefing.md  curator-summary.json  doc-manifest.json  events.jsonl  knowledge.jsonl  plan-ledger.jsonl  plan.md  spec.md  telemetry.jsonl
.swarm/evidence/: 1.4.json  1.5.json  1.6.json  2.1.json  2.2.json  2.3.json  2.4.json  2.5.json  2.6.json  agent-tools-init-1776081668743.json  agent-tools-init-1776087767577.json
.swarm/evidence/1/: completion-verify.json  drift-verifier.json
.swarm/evidence/1.1/: evidence.json
.swarm/evidence/2/: completion-verify.json  drift-verifier.json
.swarm/evidence/2.1/: evidence.json
.swarm/evidence/3/: completion-verify.json  drift-verifier.json
.swarm/evidence/placeholder_scan/: evidence.json
.swarm/evidence/quality_budget/: evidence.json
.swarm/evidence/retro-1/: evidence.json
.swarm/evidence/retro-2/: evidence.json
.swarm/evidence/retro-3/: evidence.json
.swarm/evidence/sast_scan/: evidence.json
.swarm/evidence/secretscan/: evidence.json
.swarm/evidence/syntax_check/: evidence.json
.swarm/review-receipts/: 2026-04-13-354a95dd-bf3f-48a9-a25d-e98c1f2000f2.json  2026-04-14-0ebeaf47-ae87-49f4-bb87-73785e6be483.json  2026-04-14-24d08cd5-7fd3-4581-87a7-b9cad4ec0e83.json  2026-04-14-37e05fef-44a6-4400-9a0c-dda2fb984251.json  2026-04-14-49535cdc-76b3-48d8-ad0a-5c295c71ca1a.json  2026-04-14-962f8720-141b-4b0f-a628-539e6765fed5.json  2026-04-14-d7d487b0-1961-4f19-90b2-66b520c9fcaa.json  2026-04-15-77561455-cf07-4c14-a13e-d777b6cd1f91.json  index.json
.swarm/session/: state.json
agent_docs/: SPEC.md  boundaries.md  commands.md  data_formats.md  models.md  pipeline.md
docs/: CHANGELOG.md  README.md  architecture.md  configuration.md  context-layer.md  faq.md  ollama-setup.md  performance.md  pipeline.md  testing.md
examples/: __init__.py  context-config-example.yaml
openspec/changes/archive/2026-04-12-setup-project-foundation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-12-setup-project-foundation/specs/cli-interface/: spec.md
openspec/changes/archive/2026-04-12-setup-project-foundation/specs/configuration-management/: spec.md
openspec/changes/archive/2026-04-12-setup-project-foundation/specs/feature-store/: spec.md
openspec/changes/archive/2026-04-12-setup-project-foundation/specs/project-structure/: spec.md
openspec/changes/archive/2026-04-12-setup-project-foundation/specs/test-infrastructure/: spec.md
openspec/changes/archive/2026-04-13-implement-face-layer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-13-implement-ingestion-stage/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-14-implement-context-layer/: design.md  proposal.md  tasks.md
openspec/specs/context-analysis/: spec.md
openspec/specs/face-analysis/: spec.md
openspec/specs/photo-ingestion/: spec.md
plans/: photochron-refactor-coverage-DECISIONS.md  photochron-refactor-coverage-baseline.json  photochron-refactor-coverage.plan.md
scripts/: bench.py  gen_bench_fixture.py  profile_face_detection.py  regenerate_golden_ranking.py
src/photochron/: __init__.py  __main__.py  logging_config.py
src/photochron/analysis/: __init__.py  context_analyzer.py
src/photochron/anchor/: __init__.py  loader.py  models.py
src/photochron/cli/: __init__.py  commands.py  wizard.py
src/photochron/config/: __init__.py  anchors.py  models.py
src/photochron/context/: __init__.py  analyzer.py  analyzer.py,cover
src/photochron/face/: __init__.py  insightface_wrapper.py
src/photochron/models/: __init__.py  ollama_client.py
src/photochron/output/: __init__.py  exif_writer.py  renamer.py  reports.py
src/photochron/pipeline/: __init__.py
src/photochron/pipeline/stages/: __init__.py  anchor_layer.py  context_layer.py  face_layer.py  ingestion.py  output_layer.py  ranking_engine.py
src/photochron/ranking/: __init__.py  constraints.py  estimator.py
src/photochron/review/: __init__.py
src/photochron/store/: __init__.py  queries.py  schema.py
tests/: __init__.py  conftest.py
tests/fixtures/: generate_test_images.py  golden_ranking.json  images.py  ollama_mocks.py
tests/integration/: conftest.py  test_cli_integration.py  test_context_layer.py  test_face_layer_simple.py  test_non_destructive.py  test_pipeline_flow.py  test_schema_validation.py
tests/test_pipeline/: __init__.py  test_face_layer.py  test_ingestion.py
tests/unit/: __init__.py  test_confidence_validation.py  test_config.py  test_config_env_overrides.py  test_database_integration.py  test_error_handling.py  test_review.py  test_schema_migration.py  test_store.py  test_store_methods.py
tests/unit/anchor/: test_loader.py
tests/unit/cli/: test_commands.py  test_doctor_json.py  test_init_wizard.py
tests/unit/context/: __init__.py  test_analyzer.py  test_analyzer_error_handling.py  test_analyzer_singleton_fix.py
tests/unit/face/: __init__.py  test_insightface_wrapper.py  test_resolve_providers.py
tests/unit/models/: test_ollama_client.py
tests/unit/output/: test_renamer.py  test_reports.py
tests/unit/pipeline/: __init__.py  test_registry.py  test_run_context.py  test_stage_ledger.py
tests/unit/pipeline/stages/: __init__.py  test_anchor_layer.py  test_context_layer.py  test_context_layer_memory.py  test_context_layer_methods.py  test_context_layer_progress.py  test_face_layer.py  test_ingestion_helpers.py  test_ingestion_parallel.py  test_output_layer.py  test_ranking_engine.py  test_ranking_overrides.py
tests/unit/ranking/: test_constraints.py  test_estimator.py  test_golden_fixture.py  test_review_overrides.py
(+1 files in other folders)
