[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photochron"
version = "0.1.0"
description = "Local-first CLI tool that sorts digitized family photos without timestamps into chronological order using AI-based age estimation"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    {name = "photochron Contributors"}
]
# Note: with PEP 639 `license = "AGPL-3.0-or-later"`, setuptools >= 77 forbids
# the legacy `License :: ...` classifier (which would duplicate the SPDX
# expression). The license is therefore encoded only in the field above.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pillow>=10.0.0",
    "imagehash>=4.3.1",
    "piexif>=1.1.3",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.15.0",
    "ollama>=0.1.0",
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/micschr0/photochron"
Repository = "https://github.com/micschr0/photochron"
Issues = "https://github.com/micschr0/photochron/issues"
Changelog = "https://github.com/micschr0/photochron/blob/main/CHANGELOG.md"

[project.scripts]
photochron = "photochron.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused import
"tests/**/*.py" = ["E501"]  # long assertion strings and SQL in tests
"src/photochron/models/ollama_client.py" = ["E501"]  # long prompt templates

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "integration: integration tests",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
# Note: this is the *target*, used by `make cov` for the local full-suite
# (unit + integration) run. The CI job runs unit tests only and passes
# `--cov-fail-under=0` to override this — unit coverage currently sits at
# ~70 % because the heavy ML stages need the integration suite to drive them.
fail_under = 80

[dependency-groups]
# PEP 735 dev group. Single source of truth — preferred over the deprecated
# `[project.optional-dependencies]` block.
dev = [
    # Pin mypy to the 1.x line — mypy 2.0 ships breaking changes around
    # Pydantic Field(default_factory=...) that the codebase has not been
    # migrated to yet. Bump deliberately once the v2 migration lands.
    "mypy>=1.20.0,<2.0",
    "ruff>=0.15.10",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "types-pyyaml>=6.0.0",
]
